# VoiceAgent

./: .gitattributes  .gitignore  Agent.py  README.md  Server.py  VectorDB.py  download_kokoro.py  error.txt  gpu_info.txt  gpu_info_ascii.txt  installed_files.txt  installed_files_ascii.txt  installed_files_cudnn.txt  installed_files_cudnn_ascii.txt  listner.md  listner.py  main.py  packages.txt  packages_ascii.txt  pyproject.toml  requirements.txt  t.py  tailwind.config.js  test_logs.txt  test_nvidia.py  test_nvidia_v2.py  test_out.txt
backend/: Agent.py  VectorDB.py  email-template.html  index.html  package-lock.json  package.json  pyproject.toml
backend/public/: robots.txt  sitemap.xml
backend/src/: App.jsx  index.css
backend/src/components/: AIPulseLine.jsx  Footer.jsx  Navbar.jsx  SEO.jsx
backend/src/pages/: Home.jsx  Integrations.jsx  Manifesto.jsx  PrivacyPolicy.jsx
backend/tools/: basic_tools.py
chroma_docs/: chroma.sqlite3
chroma_memory/: chroma.sqlite3
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: AnimatedMic.jsx  HeroSection.jsx  LogoMarquee.jsx  Navbar.jsx  VideoPlayer.jsx
src/: index.css
tools/: basic_tools.py
