[project]
name = "voicechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "ollama>=0.6.1",
    "onnxruntime>=1.24.1",
    "openai>=2.20.0",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "speechrecognition>=3.14.5",
    "websockets>=16.0",
]
