[project]
name = "voicechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faster-whisper>=1.2.1",
    "ir>=0.0.6",
    "kokoro>=0.9.2",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "mcp>=1.26.0",
    "nvidia-cublas-cu12>=12.9.1.4",
    "nvidia-cudnn-cu12>=9.19.0.56",
    "ollama>=0.6.1",
    "onnxruntime>=1.24.1",
    "openai>=2.20.0",
    "openwakeword>=0.4.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "pytorch",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "soundfile",
    "speechrecognition>=3.14.5",
    "torch>=2.10.0",
    "websockets>=16.0",
]
