[project]
name = "voicechat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "browser-use>=0.11.13",
    "chromadb>=1.5.5",
    "faster-whisper>=1.2.1",
    "ir>=0.0.6",
    "kokoro>=0.9.2",
    "kokoro-onnx>=0.5.0",
    "langchain>=1.2.10",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.13",
    "langchain-google-genai>=3.2.0",
    "langchain-mcp-adapters>=0.2.1",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "mcp>=1.26.0",
    "nvidia-cublas-cu12",
    "nvidia-cudnn-cu12",
    "ollama>=0.6.1",
    "onnxruntime>=1.24.1",
    "openai>=2.20.0",
    "openwakeword>=0.4.0",
    "playwright>=1.58.0",
    "pyaudio>=0.2.14",
    "python-dotenv>=1.2.1",
    "pyttsx3>=2.99",
    "requests>=2.32.5",
    "sentence-transformers>=5.3.0",
    "sounddevice>=0.5.5",
    "soundfile",
    "speechrecognition>=3.14.5",
    "torch",
    "websockets>=16.0",
]
